fix: pokemon name was leaking from it's div, solved w/ white-space: nowrap

--- a/src/assets/css/ListItem.css
+++ b/src/assets/css/ListItem.css
@@ -27,5 +27,6 @@
     display: flex;
     justify-content: right;
     align-items: center;
+    white-space: nowrap;
     color: #FFFFFF;
 }
